--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar"></div> 
   <div class="container">
-    <div id="filters-bar" style="display: none;" class="filters-bar">
+    <div id="filters-bar"class="filters-bar">
       <div id="filters" class="active-filters"></div>
       <button id="clear-filters" class="clear-btn">Clear</button>
     </div>
